# spotify-tracks-web-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  plotly-cloud.toml  pyproject.toml
.github/workflows/: ci.yml
scripts/: deploy_prep.py  precompute.py
src/spotify_tracks_app/: __init__.py  api.py  app.py  config.py  data.py  preprocessing.py  server.py
src/spotify_tracks_app/tabs/: __init__.py  ks_tab.py  umap_tab.py
tests/: test_api.py  test_data.py  test_ks_tab.py  test_preprocessing.py
