[project]
name = "spotify-tracks-web-app"
version = "0.1.0"
description = "Dash + Plotly app for exploring the Ultimate Spotify Tracks DB (UMAP map + KS feature comparison)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dash>=2.17",
    "plotly>=5.22",
    "pandas>=2.2",
    # numpy is capped because numba (a umap-learn dependency) does not yet
    # support numpy >= 2.3; without this cap the resolver backtracks numba to an
    # ancient version whose llvmlite cannot build on Python 3.12.
    "numpy>=1.26,<2.3",
    "scipy>=1.13",
    "numba>=0.61.2",
    "umap-learn>=0.5.6",
    "pyarrow>=16.0",
    "kagglehub>=0.3",
    "gunicorn>=22.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7",
    "black>=25.1",
    "isort>=6.0",
    "ruff>=0.12",
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spotify_tracks_app"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, UP: pyupgrade, B: bugbear, D: pydocstyle.
select = ["E", "F", "I", "UP", "B", "D"]
ignore = ["D203", "D213"]  # avoid the two mutually-exclusive docstring rules.

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # tests don't need full docstring coverage.

[tool.pytest.ini_options]
testpaths = ["tests"]
